[gd_scene load_steps=5 format=2]

[ext_resource path="res://Obstacles/Boss/Boss_Bone/Boss_Bone.gd" type="Script" id=1]
[ext_resource path="res://Obstacles/Boss/Boss_Bone/Boss_Bone.png" type="Texture" id=2]
[ext_resource path="res://Obstacles/Audio/explode3.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.96715
height = 39.6499

[node name="Boss_Bone" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 84, 0 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Enemies",
]]
position = Vector2( 105, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Flash_Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Explode_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="Explode_SFX" to="." method="_on_Explode_SFX_finished"]
